--- a/package.json
+++ b/package.json
@@ -1,12 +1,40 @@
 {
-  "name": "code-red-starter",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "limitless",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "json-server": "^0.16.3"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+		"json-server": "^0.16.3"
   },
   "scripts": {
-    "db": "json-server --watch db.json --port 3004"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+		"db": "json-server --watch db.json --port 3004"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
