--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-		"json-server": "^0.16.3"
+    "web-vitals": "^1.1.2",
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-		"db": "json-server --watch db.json --port 3004"
+    "db": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
